fix image stretch issues

--- a/rqm.css
+++ b/rqm.css
@@ -9,6 +9,7 @@ body{
   /* background: -webkit-linear-gradient(red, yellow); */
   background-image: url('https://i.pinimg.com/originals/c1/bb/ee/c1bbeeffefe68c717deb2ecceaa3e2d3.jpg');
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .title h1 {
@@ -30,9 +31,9 @@ body{
 }
 
 #img {
-  max-width: 100%;
+  height: auto;
   max-height: 100%;
-  width: 100%;
+  max-width: 100%;
 }
 
 .panel-lesswhite {
